deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: $CI_PROJECT_NAME
  name: $CI_PROJECT_NAME-ingress
  namespace: molmon
spec:
  rules:
  - host: demo-world.example.com
    http:
      paths:
      - backend:
          service:
            name: $CI_PROJECT_NAME-svc
            port:
              number: 80
        path: /
        pathType: Prefix
